--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="./index.html" class="navbar-brand">
             <img
               id="navlogo"
-              src="./assets/logo.png"
+              src="assets/logo.png"
               alt="BikeExpress logo"
               height="40"
             />
