Fixed folder letter case

--- a/buy.html
+++ b/buy.html
@@ -30,7 +30,7 @@
           <a href="./index.html" class="navbar-brand">
             <img
               id="navlogo"
-              src="./assets/logo.png"
+              src="./Assets/logo.png"
               alt="BikeExpress logo"
               height="40"
             />
@@ -73,7 +73,7 @@
         <div class="product-summary">
           <h2>Product: Specialized Diverge Expert</h2>
           <img
-            src="./bike_1.png"
+            src="./Assets/bike_1.png"
             alt="Specialized Diverge Expert"
             class="checkout-product-img"
           />
